# Rust_WebSocket_RelayServer-EC2-V2-Windows

./: Cargo.toml  Obfus Method.txt  README.MD  build_error.txt  config.toml  decode_names.js  decode_names.ps1  decode_test.py  derivec2-firebase-adminsdk-fbsvc-5af99bef04.json  fix_names.js  index.html  refactorPlan.md  tradeSignal.json  การBuildบน ec2.txt
RustLib/indicator_math/: README.md  indicatormath_tick.md
dashboard2/: index  index.html
dashboard2/css/: styles.css
dashboard2/js/: app.js
indicator_math/: Cargo.toml  CodeCandleMaster.json  README.md  clsAnalysisGenerator.js  indicator.js
indicator_math/src/: Untitled1.txt  analysis_generator.rs  indicators.rs
logs/2026-01-02/: lot_1.json  lot_2.json  lot_3.json  lot_4.json  lot_5.json  lot_6.json
logs/2026-01-16/: lot_1.json  lot_2.json  lot_3.json  lot_4.json  lot_5.json  lot_6.json  lot_7.json  lot_8.json  lot_9.json
logs/2026-01-17/: lot_1.json
logs/2026-01-19/: lot_1.json  lot_2.json  lot_3.json  lot_4.json
logs/2026-01-30/: lot_1.json
logs/2026-02-02/: lot_1.json
logs/2026-02-04/: lot_1.json
logs/2026-02-20/: lot_1.json  lot_2.json  lot_3.json  lot_4.json
logs/2026-02-21/: lot_1.json  lot_10.json  lot_11.json  lot_12.json  lot_13.json  lot_14.json  lot_15.json  lot_16.json  lot_17.json  lot_2.json  lot_3.json  lot_4.json  lot_5.json  lot_6.json  lot_7.json  lot_8.json  lot_9.json
public/: config.js  index.html  index_backup.html  login.html  setup.html  tick_history.html  trade_dashboard.html
src/: architecture.drawio  firestore_manager.rs  main.rs  market_scanner.rs
(+35 files in other folders)
